# xue_hua_app_badge

./: .gitattributes  CHANGELOG.md  README.md  README.zh-CN.md  pubspec.yaml
.github/workflows/: precompile-android.yml  precompile-apple.yml  precompile-binaries.yml  precompile-linux.yml  precompile-windows.yml  verify-precompiled.yml
android/: build.gradle  build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/build_tool/lib/src/: artifacts_provider.dart  cargo.dart  precompile_binaries.dart  target.dart  (+1 more)
cargokit/gradle/: plugin.gradle
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: badge_android_test.dart  badge_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/packaging/: build-deb.sh  com.example.xue_hua_app_badge.desktop  nfpm.yaml  verify-install.sh
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: xue_hua_app_badge.podspec
ios/Classes/: XueHuaAppBadgePlugin.swift
ios/xue_hua_app_badge/: Package.swift
lib/: xue_hua_app_badge.dart
lib/src/: method_channel_badge.dart  platform_badge.dart  xue_hua_app_badge.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
macos/: xue_hua_app_badge.podspec
macos/Classes/: XueHuaAppBadgePlugin.swift
macos/xue_hua_app_badge/: Package.swift
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs  lib.rs  runtime.rs
rust/src/api/: badge.rs  mod.rs  simple.rs
rust/src/platform/: android_impl.rs  ios_async.rs  ios_impl.rs  linux_impl.rs  macos_impl.rs  mod.rs  win_impl.rs
rust/src/platform/android/: context.rs
tool/: test_android_badge.sh
windows/: CMakeLists.txt
(+10 files in other folders)
