[package]
name = "xue_hua_app_badge"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1.52.3", features = ["rt", "macros"] }
threadpool = "1.8.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSDockTile"] }
dispatch2 = "0.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.16.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.10.1"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSError"] }
objc2-ui-kit = { version = "0.3.2", features = ["UIApplication", "UIDevice"] }
objc2-user-notifications = { version = "0.3.2", features = ["UNUserNotificationCenter", "UNNotificationSettings", "block2"] }
block2 = "0.6.2"
dispatch2 = "0.3.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
ndk-context = "0.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
